falta decidir que hago con la parte de experiencia

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta property="og:url" content=""/>
     <meta property="og:type" content="Portafolio" />
     <meta property="og:title" content="Ignacio González - Desarrollador" />
@@ -26,18 +26,17 @@
                             <li><a href="#sobremi">SOBRE MI</a></li>
                             <li><a href="#experiencia">EXPERIENCIA LABORAL</a></li>
                             <li><a href="#portafolio">PORTAFOLIO</a></li>
-                            <li><a href="#contacto">CONTACTO</a></li>
                         </ul>
                     </nav>
-                    <div id="icon-nav">
+                    <div id="icono-nav">
                         <i class="fa-solid fa-bars"></i>
                     </div>
 
                     <!---iconos de las redes sociales-->
                     <div class="redes">
-                        <div><a href=""><i class="fa-brands fa-github"></i></a></div>
-                        <div><a href=""><i class="fa-brands fa-linkedin"></i></a></div>
-                        <div><a href=""><i class="fa-solid fa-envelope"></i></a></div>
+                        <div><a href="https://github.com/GonzalezNacho" target="_blank"><i class="fa-brands fa-github"></i></a></div>
+                        <div><a href="https://www.linkedin.com/in/ignacio-gonzalez-escalada/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
+                        <div><a href="mailto:gonzalez.escalada.ignacio@gmail.com"><i class="fa-solid fa-envelope"></i></a></div>
                     </div>
                 </div>
             </header>
@@ -51,10 +50,10 @@
                         <a href="#portafolio">Ir a Portafolio</a>
                     </div>
                     <div class="text">
-                        <h2>Soy <span>Ignacio González</span> , Desarrollador</h2>
+                        <h2>Soy <span>Ignacio González</span>, Desarrollador</h2>
                         <p class="descripcion">Soy experto en configuración de componentes Hardware y Software
                             enfocado a la seguridad empresarial.
-                            Con más de 6 años de experiencia como soporte técnico, y 2 años
+                            Con más de 6 años de experiencia como soporte técnico, y 3 años
                             adentrándome en el mundo de la programación, busco seguir
                             creciendo profesionalmente. </p>
                     </div>
@@ -72,8 +71,10 @@
             <p class="titulo-seccion">Sobre Mi</p>
             <h2>Hola, soy <span>Ignacio Gonzalez</span></h2>
             <h3>Desarrollador</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque rem, alias eius atque sunt consectetur quidem optio quam ratione quia facere voluptatibus, consequuntur consequatur amet eum est cumque assumenda quae?</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum reiciendis illum maiores adipisci minima voluptas dolorem perferendis commodi accusantium fuga veritatis libero excepturi reprehenderit hic minus, dignissimos quae. Neque, necessitatibus!</p>
+            <p>Graduado de una escuela técnica, obtuve el título de Técnico en Electrónica.</p>
+            <p>Actualmente me encuentro trabajando hace más de 6 años en el Departamento de Sistemas del Sanatorio Clínica Modelo de Morón. Poseo amplios conocimientos en networking, programación (Java , Html, CCS , JS, NodeJS, python y BASH Scripting), manejo de bases de datos (mySQL) , administración de servidores Linux, pfSense, mail server, Apache; configuración de diversos dispositivos de grabación, tendido y cableado estructurado; virtualización de pc, etc. </p>
+            <p>Estoy cursando el ultimo año de la carrera de Técnico Superior en Análisis de Sistemas y aprendiendo React de forma autodidacta.
+                Busco la oportunidad de seguir creciendo profesionalmente en una empresa estable donde se me permita demostrar todo mi potencial. </p>
             <a href="" target="_blank" >Descargar CV</a>
         </div>
     </section>
@@ -119,6 +120,58 @@
             </div>
         </div>
     </section>
+    <section id="portafolio">
+        <h3 class="titulo-seccion">MIS PROYECTOS</h3>
+        <div class="fila">
+            <div class="proyecto">
+                <div class="overlay"></div>
+                <img src="https://raw.githubusercontent.com/GonzalezNacho/Juego-De-Memoria/main/assets/img/vista-desktop.png" alt="">
+                <div class="info">
+                    <h4>Memotest</h4>
+                    <p>HTML CSS JS - Juego</p>
+                    <div class="iconos-proyecto">
+                        <a href="https://github.com/GonzalezNacho/Juego-De-Memoria" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://memotest-nachogonzalez.vercel.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="proyecto">
+                <div class="overlay"></div>
+                <img src="https://raw.githubusercontent.com/GonzalezNacho/Juego---Maybe-Pass/main/doc/maybe-pass-captura.png" alt="">
+                <div class="info">
+                    <h4>Maybe-Pass</h4>
+                    <p>JAVA SWING-Juego</p>
+                    <div class="iconos-proyecto">
+                        <a href="https://github.com/GonzalezNacho/Juego---Maybe-Pass" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="proyecto">
+                <div class="overlay"></div>
+                <img src="https://raw.githubusercontent.com/GonzalezNacho/Python-Crud-Login/main/doc/offprice%20login.png" alt="">
+                <div class="info">
+                    <h4>Offprice</h4>
+                    <p>PYTHON FLASK MYSQL- Página web</p>
+                    <div class="iconos-proyecto">
+                        <a href="https://github.com/GonzalezNacho/Python-Crud-Login" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://offprice.pythonanywhere.com/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="conteiner-footer">
+
+            <a href="#">Desarrollador Gonzalez Ignacio</a>
+            
+            <div class="redes-footer">
+                <div><a href="https://github.com/GonzalezNacho" target="_blank"><i class="fa-brands fa-github"></i></a></div>
+                <div><a href="https://www.linkedin.com/in/ignacio-gonzalez-escalada/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
+                <div><a href="mailto:gonzalez.escalada.ignacio@gmail.com"><i class="fa-solid fa-envelope"></i></a></div>
+            </div>
+        </div>
+    </footer>
 
     <script src="./js/script.js"></script>
 </body>
