--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta property="og:url" content=""/>
+    <meta property="og:url" content="https://gonzaleznacho.github.io/portafolio/"/>
     <meta property="og:type" content="Portafolio" />
     <meta property="og:title" content="Ignacio González - Desarrollador" />
     <meta property="og:description" content="Cv virtual de Ignacio González" />
-    <meta property="og:image" content="./img/logo6.svg" />
+    <meta property="og:image" content="https://gonzaleznacho.github.io/portafolio/img/logo6.svg" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./img/logo1.svg">
