agregando open graph

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="Portafolio" />
     <meta property="og:title" content="Ignacio González - Desarrollador" />
     <meta property="og:description" content="Cv virtual de Ignacio González" />
-    <meta property="og:image" content="https://gonzaleznacho.github.io/portafolio/img/logo6.svg" />
+    <meta property="og:image" content="https://gonzaleznacho.github.io/portafolio/img/logo600.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./img/logo1.svg">
